<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">单兵取证</string>
    <string name="message">短消息</string>
    <string name="contacts">通讯录</string>
    <string name="voice_upload">语音上报</string>
    <string name="video_upload">视频上报</string>
    <string name="recommended_friends">新的朋友</string>
    <string name="group_chats">群聊</string>
    <string name="official_accounts">公众号</string>
    <string name="chat">微信</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="wechat_id">微信号</string>
    <string name="my_posts">相册</string>
    <string name="collection">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_bag">卡包</string>
    <string name="expression2">表情</string>
    <string name="settings">设置</string>
    <string name="moments">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="shake2">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="drift_bottle">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="games">游戏</string>
    <string name="search">搜索</string>
    <string name="countries_and_areas">国家和地区</string>
    <string name="password">密码</string>

    <string name="action_settings">Settings</string>

    <string name="menu_groupchat">发起群聊</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_money">微信支付</string>

    <string name="all_offline">所有城市</string>
    <string name="download_offline">下载管理</string>

    <string name="btn_getip">GetIP</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_start_rec">Start Record</string>
    <string name="btn_stop_rec">Stop Record</string>
    <string name="btn_chk1">over udp</string>
    <string name="btn_chk2">over tcp</string>
    <string name="btn_snapshot">snap</string>
    <string name="btn_getwifi">GetWifi</string>
    <string name="btn_setwifi">SetWifi</string>
    <string name="btn_open_usb">Open Usb</string>

    <string name="btn_search">Search</string>
    <string name="btn_connect_dev">Connect Dev</string>
    <string name="btn_disconnect_dev">Disconnect Dev</string>
    <string name="btn_set">Set</string>
    <string name="tip_devchan">Please first connect the Wi-Fi of this device on system setting of android.</string>
    <string name="tip_enter_ipport">Please enter IP:Port. The port can be ignored.</string>

    <string name="pwm_channel">PWM 通道(支持2路, 0 or 1)</string>
    <string name="btn_setPwm">设置PWM</string>

    <string name="tip_serial">先【连接设备】，再输入要发送的字符串点击【发送】按钮。关闭该界面，断开连接</string>
    <string name="tip_txt_16">16进制字符串(e.g:a-->0a)</string>
    <string name="btn_serialPort">串口透传</string>
    <string name="btn_serial_connect">连接设备</string>
    <string name="btn_serial_send">发送</string>
    <string name="btn_serial_back">返回</string>
</resources>
